added apply x with basic ui

--- a/Group II/02 - Elements of functional programming/index.html
+++ b/Group II/02 - Elements of functional programming/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="text" id="name" placeholder="name">
+    <input type="number" id="times" placeholder="times">
+    <button id="doit">Do it!</button>
+
+    <div id="result"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
