--- a/Group I/02 - Elements of functional programming/index.html
+++ b/Group I/02 - Elements of functional programming/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1000, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
+    <input type="text" id="name" placeholder="name">
+    <input type="number" id="times" placeholder="times">
+    <button id="doit">Do it!</button>
+
+    <div id="result"></div>
+
     <script src="index.js"></script>
 </body>
+
 </html>
