--- a/Group I/03 - Callbacks and events/index.html
+++ b/Group I/03 - Callbacks and events/index.html
@@ -7,7 +7,14 @@
     <title>Callbacks</title>
 </head>
 <body>
+    <style>
+        button:hover{
+            color: red;
+        }
+    </style>
     <h1>Callbacks Demos</h1>
+    <button id="clickMe">Click me</button>
+    <div id="result"></div>
     <script src="index.js"></script>
 </body>
 </html>
